tests/fail/exponential_overuse.is
let x : Wrap Bool = wrap true;
@[2] x
